session3/wordpress/percona-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: percona
  labels:
    app: percona
spec:
  replicas: 1
  selector:
    matchLabels:
      app: percona
  template:
    metadata:
      labels:
        app: percona
    spec:
      containers:
        - name: percona
          image: dockerhub.ir/percona:8.0.27-18
          ports:
            - containerPort: 3306
