session3/wordpress/percona-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: percona
spec:
  selector:
    app: percona
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
